# Project-Creator

./: .gitignore  LICENSE  README.md  setup.cfg
src/project_creator/: build.py
src/project_creator.egg-info/: PKG-INFO  SOURCES.txt
