[metadata]
name = project_creator
description = Create a python package structure
author = Mr_HxID
license = MIT
license_file = LICENSE
version = 1.0.0
platforms = win32
classifiers = 
    Programming Language :: Python :: 3.10

[options]
packages = 
    project_creator
install_requires =

python_requires = >=3.10
package_dir = 
    =src
zip_safe = no